Fix share dialog display on mobile devices

--- a/shared/components/ShareDialog.less
+++ b/shared/components/ShareDialog.less
@@ -1,7 +1,8 @@
 .ShareDialog__buttons-container {
     display: flex;
     width: 350px;
-    padding: 8px;
+    padding: 8px 0;
+    max-width: 100%;
     justify-content: space-around;
 }
 
